*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgCardPictureSelectionHelp = Here you can select the image that will be displayed. If the first picture is empty, the second picture is shown (and so on).
 msgDataSaved = Items have been saved
 msgFieldWithSameNameExists = A field with the same name already exists. Please enter a different name for this field.
 msgCouldNotDetermineVersion = Could not determine version. Please be aware of the upgrade paths: version 2.x should first be upgraded to version 3.0. Version 3.0 beta must also be upgraded to 3.0. All others can be upgraded with this version. Continue?
