*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,8 @@
+lblRelatedItems = Related Items
+lblLendItems = Lend Items
+lblDueDate = Due Date
+lblViewContainers = View Containers
+lblViewItems = View Items
 lblPictures = Pictures
 lblBefore = Before
 lblAfter = After
