--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgDueDateBeforeStartDate = The due date cannot be before the start date
 msgCardPictureSelectionHelp = Here you can select the image that will be displayed. If the first picture is empty, the second picture is shown (and so on).
 msgDataSaved = Items have been saved
 msgFieldWithSameNameExists = A field with the same name already exists. Please enter a different name for this field.
@@ -129,10 +130,11 @@ msgSelectPerson = Please select the person to whom the item(s) are lend
 msgAllItemsAreAvailable = All the %1 items are available and can be lend
 msgAllItemsLoanInformation = Updating the information of %1 items. The items are currently all lend and can all be registered as returned.
 msgItemIsAvailable = The item is currently available and can be lend
-msgLoanInformation = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>%3 days</b> ago
-msgLoanInformationToday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>today</b>
-msgLoanInformationYesterday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>yesterday</b>
-msgCantBeDeletedDueToLoans = This person can't be deleted as there are (or have been) items loaned to this person
+msgLoanInformation = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>%3 days</b> ago. %3
+msgLoanInformationToday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>today</b>. %3
+msgLoanInformationYesterday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>yesterday</b>. %3
+msgLoanInformationDue = The item is due on %1.
+msgDeletePersonLendItems = This person did lend items in the past. Deleting this user will result in loosing loan history information. Continue anyway?
 msgReapplyingSettings = (Re-) applying Settings
 msgStartBackup = Starting the backup
 msgClosingDb = Closing the Database
