*** empty log message ***

--- a/modules/container.properties
+++ b/modules/container.properties
@@ -1,17 +1,18 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Thu Sep 25 09:56:33 CEST 2008
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=557/505
 online_search_default_mode=
 field_definitions={0/&/null/&/false/&/false/&/false}{1/&/null/&/true/&/true/&/true}{2/&/null/&/true/&/false/&/false}{202/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{209/&/null/&/true/&/false/&/false}{212/&/null/&/true/&/false/&/false}{211/&/null/&/true/&/false/&/false}{210/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
 group_by=1\#
 card_view_item_description=
-table_column_order=
+table_column_order=214\#
 online_search_default_region=
 auto_create_subitems=true
 loan_form_size=500/500
@@ -25,7 +26,7 @@ file_import_dialog_size=550/600
 field_settings_dialog_size=525/556
 quick_view_settings_dialog_size=575/456
 auto_add_perfect_match=false
-quick_view_field_definitions={202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={2/&/false/&/Horizontal/&/0}{209/&/true/&/Horizontal/&/0}{212/&/true/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=210\#214\#203\#104\#209\#103\#204\#205\#105\#212\#201\#102\#1\#206\#211\#202\#0\#101\#
