*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,4 +1,4 @@
-lblItemInformation = Item Info
+lblAdministration = Administration
 lblLoanInformation = Loan Information
 lblRelatedItems = Related Items
 lblLendItems = Lend Items
