*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblAddMultiple = Create Multiple
 lblAdministration = Administration
 lblLoanInformation = Loan Information
 lblRelatedItems = Related Items
