*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgThereAreOverdueItems = Some of the items you have lend to other persons are overdue!
 msgDueDateBeforeStartDate = The due date cannot be before the start date
 msgCardPictureSelectionHelp = Here you can select the image that will be displayed. If the first picture is empty, the second picture is shown (and so on).
 msgDataSaved = Items have been saved
