*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblImportDiscFromFreeDB = Read Disc From Drive
 lblAddMultiple = Create Multiple
 lblAdministration = Administration
 lblLoanInformation = Loan Information
@@ -213,8 +214,8 @@ lblTipOfTheDay = Tip of the Day
 lblShowTipsOnStartup = Show tips on startup
 lblWords = Words
 lblTemplateX = Template %1
-lblManageX = Manage %1
-lblManage = Manage
+lblManageX = Maintain %1
+lblManage = Maintain
 lblTitleRewriter = Title Rewriter
 lblRestartNumbering = Restart numbering
 lblRewriteAll = Rewrite all Titles
