*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,4 +1,4 @@
-lblImportDiscFromFreeDB = Read Disc From Drive
+lblRetrieveAudioCDInfo = Retrieve CD Information
 lblAddMultiple = Create Multiple
 lblAdministration = Administration
 lblLoanInformation = Loan Information
