*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,7 @@
+lblPersonOrder = Sort persons method
+lblPersonOrginalOrder = Original order
+lblPersonOrderByLastname = Order by last name
+lblPersonOrderByFirstname = Order by first name
 lblRetrieveAudioCDInfo = Retrieve CD Information
 lblAddMultiple = Create Multiple
 lblAdministration = Administration
