--- a/reports/software/html/software_details_desert.properties
+++ b/reports/software/html/software_details_desert.properties
@@ -1,5 +1,5 @@
 #
-#Sat Jan 05 12:22:52 CET 2008
+#Sun Sep 28 15:20:36 CEST 2008
 image_height=200
 report_name=Detail Report (desert)
 image_width=200
