--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpOnlineSearchQueryFullDetails = On the initial search it is not required to retrieve the full item detail, including images. To speed up the search it is recommended to disable this setting.
 tpDeleteModuleWizard = Starts the wizard to delete custom modules.
 tpAlterModuleWizard = Starts the wizard to alter existing modules.
 tpCreateModuleWizard = Starts the wizard to create a new custom module.
