*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgRetrievingItemDetails = Retrieving additional details for %1
 msgAnErrorOccurredWhileRetrievingItem = An error occurred while retrieving the item(s),
 msgThereAreOverdueItems = Some of the items you have lend to other persons are overdue!
 msgDueDateBeforeStartDate = The due date cannot be before the start date
