*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblInputFieldHeight = Input Field Height
 lblOnlineSearchQueryFullDetails = Retrieve full details on initial search (slow)
 lblPersonOrder = Sort persons method
 lblPersonOrginalOrder = Original order
