--- a/webapp/datacrow/WEB-INF/web.xml
+++ b/webapp/datacrow/WEB-INF/web.xml
@@ -15,6 +15,11 @@
 		<param-value>/WEB-INF/datacrow-config.xml</param-value>
 	</context-param>
 	<context-param>
+		<description />
+		<param-name>javax.faces.PARTIAL_STATE_SAVING_METHOD</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<context-param>
 		<description>
 			State saving method: "client" or "server" (= default) See
 			JSF Specification 2.5.3
