*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -19,7 +19,7 @@ msgTableUpgradeMissingColumn = Table %1 needs to be upgraded. Missing column %2
 msgTableUpgradeIncorrectColumn = Table %1 needs to be upgraded. Column %2 is of the incorrect type size.
 msgImportFinished = Import has finished successfully!
 msgAddedX = Added %1
-msgDatabaseIsLocked = The database is currently locked. Please restart Data Crow and try again.
+msgDatabaseIsLocked = The database is currently locked. This is most likely because another instance of Data Crow is running in the background. Please restart Data Crow and try again.
 msgCannotDeleteThisUser = This user cannot be deleted as this is the only administrator user.
 msgLoginnameIsNotAllowedToChange = The Login name cannot be changed to a different value.
 msgPleaseEnterUsername = Please enter the username
