*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,7 +1,10 @@
+lblPersonFirstnameLastName = "First name Last name"
+lblPersonLastNameFirstname = "Last name, First name"
 lblButtonHeight = Button Height
 lblInputFieldHeight = Input Field Height
 lblOnlineSearchQueryFullDetails = Retrieve full details on initial search (slow)
-lblPersonOrder = Sort persons method
+lblPersonOrder = Sorting method for persons. 
+lblPersonDisplayFormat = Default display format for the persons name.
 lblPersonOrginalOrder = Original order
 lblPersonOrderByLastname = Order by last name
 lblPersonOrderByFirstname = Order by first name
