*** empty log message ***

--- a/reports/musicalbum/html/musicalbum_details_desert.properties
+++ b/reports/musicalbum/html/musicalbum_details_desert.properties
@@ -1,5 +1,5 @@
 #
-#Fri Oct 19 22:29:38 CEST 2007
+#Thu Dec 04 10:12:12 CET 2008
 image_height=200
 report_name=Detail Report (desert)
 image_width=200
