--- a/reports/musicalbum/html/musicalbum_listing_desert.properties
+++ b/reports/musicalbum/html/musicalbum_listing_desert.properties
@@ -1,5 +1,5 @@
 #
-#Fri Oct 19 22:29:39 CEST 2007
+#Thu Dec 04 10:12:23 CET 2008
 image_height=100
 report_name=List Report (desert)
 image_width=100
