--- a/reports/audiocd/html/audiocd_details_desert.properties
+++ b/reports/audiocd/html/audiocd_details_desert.properties
@@ -1,10 +1,10 @@
 #
-#Fri Oct 19 20:47:44 CEST 2007
+#Thu Dec 04 10:10:36 CET 2008
 image_height=200
 report_name=Detail Report (desert)
-max_text_length=1000
 image_width=200
-stylesheet=reports/_stylesheets/desert.css
-scale_images=true
+max_text_length=1000
 css=reports/desert.css
+scale_images=true
+stylesheet=reports/_stylesheets/desert.css
 copy_images=true
