--- a/reports/audiocd/html/audiocd_listing_desert.properties
+++ b/reports/audiocd/html/audiocd_listing_desert.properties
@@ -1,9 +1,9 @@
 #
-#Fri Oct 19 20:47:45 CEST 2007
+#Thu Dec 04 10:11:26 CET 2008
 image_height=100
 report_name=List Report (desert)
-max_text_length=1000
 image_width=100
-scale_images=true
+max_text_length=1000
 stylesheet=reports/_stylesheets/desert.css
+scale_images=true
 copy_images=true
