--- a/reports/audiocd/pdf/audiocd_details_black&white.properties
+++ b/reports/audiocd/pdf/audiocd_details_black&white.properties
@@ -1,8 +1,8 @@
 #
-#Fri Oct 19 20:49:03 CEST 2007
+#Thu Dec 04 10:08:18 CET 2008
 image_height=200
 report_name=Detail Report (black&white)
-image_width=200
 max_text_length=1000
+image_width=200
 scale_images=false
 copy_images=false
