--- a/reports/image/html/images.properties
+++ b/reports/image/html/images.properties
@@ -1,9 +1,9 @@
 #
-#Fri Oct 19 21:53:54 CEST 2007
+#Thu Dec 04 10:13:51 CET 2008
 image_height=0
 report_name=Images only Report
-max_text_length=0
 image_width=0
-stylesheet=reports/_stylesheets/desert.css
+max_text_length=0
 scale_images=false
+stylesheet=reports/_stylesheets/desert.css
 copy_images=false
