--- a/reports/musicalbum/pdf/musicalbum_details_black&white.properties
+++ b/reports/musicalbum/pdf/musicalbum_details_black&white.properties
@@ -1,5 +1,5 @@
 #
-#Fri Oct 19 22:29:50 CEST 2007
+#Thu Dec 04 10:06:41 CET 2008
 image_height=0
 report_name=Detail Report (black&white)
 max_text_length=1000
