--- a/reports/musicalbum/pdf/musicalbum_details_desert.properties
+++ b/reports/musicalbum/pdf/musicalbum_details_desert.properties
@@ -1,8 +1,8 @@
 #
-#Fri Oct 19 22:29:58 CEST 2007
+#Thu Dec 04 10:05:42 CET 2008
 image_height=0
 report_name=Detail Report (desert)
-max_text_length=1000
 image_width=0
+max_text_length=1000
 scale_images=false
 copy_images=false
