--- a/reports/software/html/software_details_desert.properties
+++ b/reports/software/html/software_details_desert.properties
@@ -1,9 +1,9 @@
 #
-#Sun Sep 28 15:20:36 CEST 2008
+#Thu Dec 04 10:12:34 CET 2008
 image_height=200
 report_name=Detail Report (desert)
-image_width=200
 max_text_length=1000
-stylesheet=reports/_stylesheets/desert.css
+image_width=200
 scale_images=true
+stylesheet=reports/_stylesheets/desert.css
 copy_images=true
