--- a/reports/software/html/software_listing_desert.properties
+++ b/reports/software/html/software_listing_desert.properties
@@ -1,9 +1,9 @@
 #
-#Fri Oct 19 22:04:52 CEST 2007
+#Thu Dec 04 10:13:15 CET 2008
 image_height=150
 report_name=List Report (desert)
-image_width=150
 max_text_length=1000
-stylesheet=reports/_stylesheets/desert.css
+image_width=150
 scale_images=true
+stylesheet=reports/_stylesheets/desert.css
 copy_images=true
