*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblLanguage = Language
 lblPersonFirstnameLastName = "First name Last name"
 lblPersonLastNameFirstname = "Last name, First name"
 lblButtonHeight = Button Height
