*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,6 @@
+lblBasedOn = Based on
+lblAddLanguage = Create new Language
+lblDeleteLanguage = Delete a Language
 lblLanguage = Language
 lblPersonFirstnameLastName = "First name Last name"
 lblPersonLastNameFirstname = "Last name, First name"
