--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgLanguageNameMustBeFilled = Please enter the name of the language.
+msgLanguageWithNameAlreadyExists = A language with the name you entered already exists. Please enter a unique name. 
 msgRetrievingItemDetails = Retrieving additional details for %1
 msgAnErrorOccurredWhileRetrievingItem = An error occurred while retrieving the item(s),
 msgThereAreOverdueItems = Some of the items you have lend to other persons are overdue!
