*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -115,7 +115,6 @@ msgMovieMassUpdateHelp = Updates movies with the information retrieved from the 
 msgEndDateMustBeAfterStartDate = The end date must be after the start date
 msgNoTitleRewritersFound = No enabled title re-writers found!
 msgFailedToLoadUserSettings = Failed to load user settings, using the default!. Error: %1
-msgFailedToLoadCache = Could not load cache for index %1 
 msgFailedToOpen = Failed to open the dialog you requested: %1 
 msgTitleRewriterExplanation = Rewrites all titles. Every title is rewritten according to the defined settings. Example: defined member word "a", title "a great movie": results in "great movie, a"
 msgNoMemberWordsDefined = No member words defined
@@ -125,7 +124,7 @@ msgAddedXItemsToView = Added %1 items to the view. Press save to add them to the
 msgAddingXToView = Adding %1 to view
 msgNoThemesFound = No themes found on this system !
 msgCouldNotConvertToInt = Could not convert value [%1] to a digit for field %2
-msgNoFieldsFound = There are no fields defined ! Please select a source file, press apply and map the source fields with the Data Crow fields!
+msgNoFieldsFound = There are no fields defined! Please select a source file, press apply and map the source fields with the Data Crow fields!
 msgNoValuesFoundToImport = Could not find any values to import into Data Crow
 msgFileCannotBeUsed = The selected source file cannot be used
 msgDestinationInUse = The destination defined for %1 is already in use
@@ -176,48 +175,32 @@ msgEmptyName = Please enter a name. Your input is needed to continue to the next
 msgEditDetails = In this screen you can easily edit one item. Edit the fields you want to fill or change. Make sure all required fields contain data (the red labeled fields).
 msgEnterName = Enter the keywords of the %1 you are about to add. The name will be used to search an online database in the next step
 msqMemoryError = The search result was larger then the available memory allows. Please narrow your search or change the 'maximum of retrieved items' in the settings panel.
-msgSearchStringLength = Please enter keyword(s) of %1 characters or longer
-msgConversionFailed = The conversion failed! Please contact support@datacrow.net
-msgConversionNeeded = The database needs to be converted. Please make a backup before you continue!
 msgAddSelectParent = Please select (or add a new) parent first
 msgUnableToChangeDbSettings = Could not change the settings for the database. The application will be fully operational. Though, the ordering of search results will not be conform the operating system localized settings
-msgSendingSearchAmazon = Sending search to Amazon.com
-msgCouldNotConnectAmazon = An error occurred while trying to connect to Amazon.com: %1
-msgDownloadingXImages = Starting to download %1 images
-msgErrorWithImage = An error occurred while retrieving cover: %1
-msgSkippingEmptyImage = Skipping empty image
-msgImageRetrieved = Image retrieved and added
-msgMoreThenOneImageFound = Found more then one image! Adding new Audio CD items for each extra image found
-msgCouldNotConnectToImdb = Could not connect to Imdb.com
 msgCouldNotConnectTo = Could not connect to %1
-msgCouldNotConnectToMusicBrainz = Could not connect to MusicBrainz
 msgParsingError = Error while parsing the retrieved data: %1
 msgNoChangesToSave = There are no changes to save
 msgSelectItemToDel = You have to select the items first before they can be deleted
 msgNoItemsToSave = There are no items to save
-msgErrorOpeningHelp = The help files could not be located. Help cannot not be shown
+msgErrorOpeningHelp = The help files could not be located. Help cannot not be shown!
 msgErrorWhileCreatingReport = An error occurred while creating the report: %1
 msgCreatingReportForXObjects = Creating report for %1 items
 msgSelectTargetFile = Please select a target file first
 msgFileNotAvailable = The file is not available for writing
 msgErrorWhileOpeningX = An error occurred while opening the file %1: %2
 msgCouldNotOpenReport = Could not open the report. Either the report is empty or no report has been selected
-msgDirectoryInvalid = Please select a valid input and output directory
 msgProcessingFileX = Processing %1
 msgJobRunning = Please wait for the previous action to be finished (or cancel the current action)
 msgStoppedSearch = The search has been canceled
 msgParsingSuccessfull = Successfully parsed result [%1]
 msgStartParsingXResults = Start parsing %1 results
-msgInvestigatingXResults = Investigating and parsing %1 results
 msgInvalidURLChangeSetting = The URL %1 is invalid, correct the server setting
 msgInvalidURL = The URL %1 is invalid, remove any accents from the search terms and try again
 msgGotResult = Got feedback result from the web server
 msgNoResultsForKeywords = No results found for %1
-msgFreedbError = Error from web server while retrieving data: %1
 msgNoResultsForDiscID = No results found for disc (with disc id %1)
 msgFoundXResults = Retrieved %1 items
 msgConnectingToServer = Connecting to server : %1
-msgQueryAborted = Query aborted!
 msgCouldNotReadDiscID = Could not read the Disc ID. Either there is no disc in the CD-ROM drive or it cannot be recognized.
 msgErrorDiscID = An error occurred while trying to get the Disc ID: %1
 msgFoundDiscID = Found disc id: %1
@@ -225,32 +208,15 @@ msgNotSaved = There are unsaved changes. Do you want to save now ?
 msgCouldNotCreateCacheForPicture = Unable to create cached picture! Picture is discarded
 msgCouldNotLoadPicture = Could not load picture
 msgCouldNotClearCache = Could not clear the cache directory
-msgServerCouldNotBeReached = The server could not be reached
-msgImageResolutionIsTooHigh = The selected picture exceeds the maximum resolution of %1
-msgUpgradeNeeded = An upgrade of the database is needed. A backup named %1 will be created. The upgrade can take a large amount of time (1 minute for 10MB database). Do you want to upgrade now ?
-msgImageFileIsTooLarge = The selected picture is too large. The file size exceeds %1 kb
 msgAddingToTable = Adding %1 to the new items tab
 msgAddingToReport = Adding %1 to the report
-msgDidNotParseFileBecause = Could not parse file %1. Unrecognized file structure
 msgSelectFiles = Please select files to import
-msgCloseServer = Do you want to stop the server as well ?
 msgSelectRowToOpen = Please select an item to open
 msgDeleteQuestion = Are you sure you want to permanently remove the selected items ?
 msgDeleteHasBeenExecuted = The delete request has been sent
-msgIMDBNeedsTitle = Please fill in the title on which the IMDB can be searched
-msgAmazonNeedsTitle = Please fill in the name on which the Amazon database can be searched
-msgAmazonUpdateStarts = The Amazon update process has been started
 msgDeleteSuccessfull = The selected items have been successfully deleted
-msgItemDeleted = The item with id %1 has been successfully deleted
-msgNoSearchResults = The search delivered no result
-msgSelectRowUpdate = Please select the item(s) to update
-msgNoRowsFound = No items could be found for the update
-msgCouldNotAccess = Could not access %1. Check the proxy settings and/or if your internet connection is active
-msgHttpRetry = Failed getting %1, retrying in 3 seconds (%2/5 times)
 msgSelectRowForTransfer = Please select an item
 msgWizardSelectItem = You have to perform a search first and select one of the retrieved items before you can continue with the next step 
-msgChooseExportDrive = Please specify the source drive for the export
-msgChooseExportTarget = Please specify a target for the export (table and/or file)
 msgApplicationStarts = System is being started
 msgApplicationStops = Data Crow is gracefully shutting down.
 msgWritingItemCache = Writing item cache to disk.
@@ -261,82 +227,26 @@ msgSynchronizerEnded = The synchronization has completed!
 msgDBCreated = No table found with the following name: %1. System will create a new table with this name.
 msgTableFound = Found the %1 table
 msgTableNotFound = %1 table has not been found, creating new !
-msgDBKeyNotUnique = The ID is not unique. Please check the database for inconsistencies
-msgDBInsertCatError = Failure while saving the software categories
 msgFileSaveError = An error occurred while writing to file: %1
 msgFileSaved = Data has been saved to file : %1
 msgFileNotFound = Could not find the file: %1. Loading the data from the library
-msgIniFound = properties file has been found loading settings
-msgIniLoadNew = The settings are been read from the new INI file
-msgIniFailure = properties file cannot be created. Settings are read from the library
-msgValueFailure = Value of the setting cannot be read/used. Will Use the default value
-msgExportStarts = Export to the target file has started
-msgImport = Import the directory contents of %1 ? (else only the directory name is registered)
 msgReadingFrom = Busy reading from %1
-msgRegDirName = Registering directory name %1 as file
-msgWritingInfo = Information is being writing to file
-msgWritingToFile = Process writes %1 to file
-msgSourceNotFound = Source file could not be read. Stopping the process
 msgUnexpectedProblemDuringFileImport = An unexpected problem was encountered while importing your files: %1
-msgImportCompleted = The import was successful. The imported items can be found under the new items tab
-msgSomeDataNotSaved = Not all items could be saved
 msgSettingsSavedUnapplied = The settings have been saved. They will become active after a restart
-msgSysError = An exception occurred
-msgSysInfo = For your information
-msgSysNotif = Please take note
 msgNoInput = Please enter a query for execution in the input field
-msgSettingsNotSaved = Settings could not be saved because of an error
 msgQuestion = Question
-msgActionCompleted = Action completed
 msgNoFileSelected = Please select a source file
 msgFileCouldNotbeCreated = Only reading is allowed on the selected drive. File could not be created
-msgEnterCDName = Enter the Location Identifier
-msgResultPassedToUI = Data has been passed to the UI by the Query Queue
-msgInvalidArray = The array is not compatible with this DataCrowObject
 msgQueryWasSuccessFull = The update query/select/insert query was successful. No errors occurred. No data was retrieved
 msgQueryError = Error while executing the query: %1
-msgRecSaved = The item with ID %1 has been saved
-msgUpdateQuerySuccesful = The update query has been successfully executed
-msgInsertQuerySuccesful = The insert query has been successfully executed
-msgCreateQuerySuccesful = The create query has been successfully executed
-msgDeleteQuerySuccesful = The delete query has been successfully executed
-msgSettingsError = An error occurred while applying the settings
 msgSearchResult = The search action retrieved %1 items
 msgSearchHasBeenExecuted = The search request has been sent
 msgViewCleared = The view has been cleared
-msgUpdateHasBeenExecuted = The update request has been sent
-msgSaveHasBeenExecuted = The save request has been sent
 msgSettingsSaved = Settings have been saved and applied
 msgSQLTableHasBeenFilled = The view has been filled
-msgNewDataSaved = The new item was saved successfully
-msgDataUpdated = The item was updated successfully
-msgError = An error occurred !
-msgNewLogUsed = The log file exceeds the limit of 1 MB and has been dumped
-msgItemInQueueNotUnique = Item %1 at row %2 is the same as item %3 at row %4. Please correct this and save again (or change the general settings)
 msgMissingRequiredValues = Required fields have been left empty. Fill required field(s) %1 for item %2
 msgItemNotUnique = Item %1 is not unique, it already exists in the database. Change one of the required fields!
-msgMaximumTextLength = The maximum text length of %1 has been exceeded. Text has been concatenated.
-msgIntegerValueError = The value %1 could not be converted to a number value, value set to %2
-msgDatabasesNotFullyDefined = Database must be defined before starting the conversion
 msgStartImportJob = Starting the import from directory : %1
 msgParsingXFiles = Starting to parse %1 files
 msgParsing = Parsing %1
 msgPictureCouldNotBeRetrieved = Picture could not be retrieved
-msgNoChangedFields = For item with ID %1 no update was necessary
-msgSettingsLoaded = Settings have been loaded
-msgInitSearch = Software Search panel has been created
-msgInitMusicSearch = Music File Search panel has been created
-msgInitMusicInsert = Music File Insert panel has been created
-msgInitInsert = Software Insert panel has been created
-msgInitNote = Note panel has been created
-msgInitMovieSearch = Movie Search panel has been created
-msgInitMovieInsert = Movie Insert panel has been created
-msgInitAudioCDInsert = Audio CD Insert panel has been created
-msgSoftwareModuleDesc = Programs, documents and games
-msgMusicAlbumModuleDesc = Music File Albums (mp3, ogg, and others) 
-msgAudioCdModuleDesc = Audio CD's
-msgBookModuleDesc = Books, comics and eBooks
-msgGenericModuleDesc = Global media
-msgImageModuleDesc = Pictures and Images
-msgMovieModuleDesc = DVD's and movie files (such as DivX) 
-msgContactPersonModuleDesc = Contact persons can loan items from you
