*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -109,7 +109,7 @@ msgSearchingOnlineFor = Searching online for %1
 msgAudioCdMassUpdateHelp = Updates audio CDs with the information retrieved from the selected online service. A perfect match on artist and title is needed to update the item successfully.
 msgMusicFileMassUpdateHelp = Updates music albums with the information from the music files on disc. The filename of the Music Track is used to find the music file.
 msgSoftwareMassUpdateHelp = Updates software items with the information retrieved from the selected Online Service. The software item is only updated in case of an exact match on the title.
-msgBookMassUpdateHelp = Updates books with the information retrieved from the selected Online Service. Either or perfect match on isbn number or on the title and artist is needed to update the book successfully.
+msgBookMassUpdateHelp = Updates books with the information retrieved from the selected Online Service. Either or perfect match on isbn number or on the title is needed to update the book successfully.
 msgAssociateMassUpdateHelp = Updates %1 with the information retrieved from the selected Online Service. A perfect match on the name is needed to update the %2 successfully.
 msgMovieMassUpdateHelp = Updates movies with the information retrieved from the selected Online Service. A perfect match on director and title is needed to update the item successfully.
 msgEndDateMustBeAfterStartDate = The end date must be after the start date
@@ -173,7 +173,6 @@ msgModuleWizard = Module Wizard - step %1 of %2
 msgInternetSearch = This step uses the online search. Enter the keywords and press enter to start a search. If no result is found you can either change the keywords or cancel the wizard in case your item simply can't be found. Please note you can also select a different server.
 msgEmptyName = Please enter a name. Your input is needed to continue to the next step
 msgEditDetails = In this screen you can easily edit one item. Edit the fields you want to fill or change. Make sure all required fields contain data (the red labeled fields).
-msgEnterName = Enter the keywords of the %1 you are about to add. The name will be used to search an online database in the next step
 msqMemoryError = The search result was larger then the available memory allows. Please narrow your search or change the 'maximum of retrieved items' in the settings panel.
 msgAddSelectParent = Please select (or add a new) parent first
 msgUnableToChangeDbSettings = Could not change the settings for the database. The application will be fully operational. Though, the ordering of search results will not be conform the operating system localized settings
