*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -162,7 +162,7 @@ lblManageExistingFilters = Existing Filters
 lblOperator = Operator
 lblModule = Module
 lblDescriptive = Descriptive?
-lblPredefinedFields = Predefined Field 
+lblPredefinedFields = Predefined Fields 
 lblNewFields = New Field
 lblDefineField = Defined Field
 lblFieldType = Field Type
@@ -330,7 +330,6 @@ lblRatingNotRated = not yet rated
 lblToggleQuickView = Toggle Quick View
 lblMove = Move
 lblAlignment = Alignment
-lblInclude = Include
 lblField = Field
 lblRight = right
 lblLeft = left
@@ -341,15 +340,12 @@ lblTextReport = Text report (tab-delimited)
 lblXmlReport = XML report
 lblCreateReport = Create Report
 lblCreateIndex = Create index
-lblReset = Reset
 lblFontStyle = Font Style
 lblEmpty = Empty
 lblEmptySearchValue = [empty / not filled]
-lblInternetUpdate = Start the internet update wizard
 lblItemWizard = Item Wizard
 lblRecursiveDir = Recursive directory search
 lblInternetServer = Server
-lblOnlyXareReturned = note that the maximum of retrieved items is 7 per search !
 lblTechnicalInfo = Technical Information
 lblSelectedItemsOnly = Update selected items only
 lblToggleToolbarLabelsAction = Toggle Toolbar Labels
@@ -396,13 +392,11 @@ lblTableColorSettings = View Colors
 lblOddColor = Odd Color
 lblEvenColor = Even Color
 lblFileFiler = %1 files
-lblBroadbandConnection = Optimize for broadband. This will result in higher quality pictures being retrieved
 lblIcon = Icon
 lblYes = Yes
 lblNo = No
 lblPicFileFilter = Images (JPeg/Gif/Bmp/Png)
 lblBckFileFilter = Data Crow backup file (bck)
-lblCDName = CD Name
 lblRemoveTrack = Remove Track
 lblAddChild = Add %1
 lblUpdateAll = Update all
@@ -421,14 +415,11 @@ lblUpdate = Update Item
 lblAddNew = Add Item(s)
 lblSave = Save
 lblSaveNew = Save New
-lblSaveCurrent = Save current
 lblFind = Find
 lblAdd = Add
 lblRemove = Remove
 lblClear = Clear
 lblClearTable = Clear Table
-lblAndOrSelect = Comply with all search conditions
-lblPreciseSelect = Match exact search conditions
 lblSortOn = Sort on
 lblStatus = Status
 lblSearchCond = Search conditions
@@ -443,10 +434,7 @@ lblRun = Run
 lblToggleMenuLabels = Show labels
 lblLoad = Load
 lblOnlineSearch = Online Search
-lblInsert = Add values
-lblTabNote = Blocknote
 lblSQLTool = SQL tool
-lblInitAllDone = <UI> Main form  has been created
 lblOpenItem = Open %1
 lblEditItemAsNew = Edit as new
 lblOK = Ok
