*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -108,7 +108,7 @@ msgMusicFileMassUpdateHelp = Updates music albums with the information from the 
 msgSoftwareMassUpdateHelp = Updates software items with the information retrieved from the selected Online Service. The software item is only updated in case of an exact match on the title.
 msgBookMassUpdateHelp = Updates books with the information retrieved from the selected Online Service. Either or perfect match on isbn number or on the title is needed to update the book successfully.
 msgAssociateMassUpdateHelp = Updates %1 with the information retrieved from the selected Online Service. A perfect match on the name is needed to update the %2 successfully.
-msgMovieMassUpdateHelp = Updates movies with the information retrieved from the selected Online Service. A perfect match on director and title is needed to update the item successfully.
+msgMovieMassUpdateHelp = Updates movies with the information retrieved from the selected Online Service. A perfect match on the title is needed to update the item successfully.
 msgEndDateMustBeAfterStartDate = The end date must be after the start date
 msgNoTitleRewritersFound = No enabled title re-writers found!
 msgFailedToLoadUserSettings = Failed to load user settings, using the default!. Error: %1
@@ -148,7 +148,7 @@ msgBackupFinished = Backup is finished
 msgSelectOutputDir = Select an output directory first
 msgStartRestore = Starting the restore
 msgRestoringFile = Restoring %1
-msgIncompleteRestore = Not all file could be restored. Please check the log file for more information.
+msgIncompleteRestore = Not all files could be restored. Please check the log file for more information.
 msgRestoreError = An error occurred while trying to restore the backup: %1
 msgRestoreFileError = While restoring %1 the following error occurred: %2
 msgRestoreFinished = Restore is finished
@@ -164,13 +164,11 @@ msgErrorWhileExecuting = Error while executing : %1
 msgNoProgramDefinedForExtension = Could not launch the file! Define a program to handle  '%1' files in the settings panel
 msgInvalidExtension = The file '%1' has an invalid extension
 msgReportNoItems = There are no items which can be added to the report. Perform a search first
-msgChoice = Two ways to go: Find the information directly online or import the information from a file on your system and update the item later on (using internet or your keyboard)
 msgNewItemWizard = New %1 Wizard - step %2 of %3
 msgModuleWizard = Module Wizard - step %1 of %2
 msgInternetSearch = This step uses the online search. Enter the keywords and press enter to start a search. If no result is found you can either change the keywords or cancel the wizard in case your item simply can't be found. Please note you can also select a different server.
-msgEmptyName = Please enter a name. Your input is needed to continue to the next step
 msgEditDetails = In this screen you can easily edit one item. Edit the fields you want to fill or change. Make sure all required fields contain data (the red labeled fields).
-msqMemoryError = The search result was larger then the available memory allows. Please narrow your search or change the 'maximum of retrieved items' in the settings panel.
+msqMemoryError = Too less memory available to load the items
 msgAddSelectParent = Please select (or add a new) parent first
 msgUnableToChangeDbSettings = Could not change the settings for the database. The application will be fully operational. Though, the ordering of search results will not be conform the operating system localized settings
 msgCouldNotConnectTo = Could not connect to %1
@@ -215,7 +213,6 @@ msgApplicationStarts = System is being started
 msgApplicationStops = Data Crow is gracefully shutting down.
 msgWritingItemCache = Writing item cache to disk.
 msgImportStarts = Starting the import
-msgSourceNotFound = The source file is not available for this process. Try and restart the process with a valid source file
 msgImportStops = Import has finished. Find the results in the new items tab
 msgSynchronizerEnded = The synchronization has completed!
 msgDBCreated = No table found with the following name: %1. System will create a new table with this name.
