--- a/_source/net/datacrow/core/resources/DcTips.properties
+++ b/_source/net/datacrow/core/resources/DcTips.properties
@@ -1,9 +1,9 @@
-tip1=You can define a default value for any field. Go to tools in the menubar and select templates. Here you can modify existing templates or create a new one. The default template will be used for all newly created items..
-tip2=The look and feel of Data Crow can be changed via the view menu. Select the look &amp; feel menu item and select another look &amp; feel.
+tip1=You can define a default value for any field. Go to administration in the menubar and select templates. Here you can modify existing templates or create a new one. The default template will be used for all newly created items..
+tip2=The look and feel of Data Crow can be changed via the settings menu. Select the look &amp; feel menu item and select another look &amp; feel.
 tip3=You can change the font for labels and normal text in the settings menu.
 tip4=The "Update All" utility allows you to change a field (or multiple fields) to a new value quickly. Right-click on a view or navigate via the tools menu to "Update all".
 tip5=You don't have to type the information, you can use the "Online Search" to quickly find the item you want to add. You can update existing items by opening the item and selecting "Update".
-tip6=If you want to change one of the default states, categories or storage media or want to add a new one you should navigate to the tools menu. From there you can select the item you want to change.
+tip6=If you want to change one of the default states, categories or storage media or want to add a new one you should navigate to the administration menu. From there you can select the item you want to change.
 tip7=Missing a field? Go to the Field Settings via the settings menu. Way down in the field list you will find user definable fields which can be enabled and renamed.
 tip8=Change the order of the fields via the Field Settings (located in the settings menu). The order of the fields will applied in the whole of Data Crow.
 tip9=The Help system can be activated via the F1 key.
